Test code clean